# py_projects

./: README.md  pyproject.toml  requirements.txt
01_mad_libs/: mad_libs.py
02_number_guessing/: number_guessing.py
03_dice_simulator/: dice_simulator.py
04_hangman/: hangman.py
05_rock_paper_scissors/: rock_paper_scissors.py
06_password_generator/: password_generator.py
07_qr_code_generator/: qr_code_generator.py
08_website_checker/: main.py  websites.csv
09_common_password_checker/: main.py
10_brute_force/: main.py
11_image_downloader/: image_downloader.py
13_file_sorter/: main.py
14_sentiment_analysis_bot/: sentiment_analysis_bot.py
15_url_shortener/: url_shortener.py
16_pdf_reader/: main.py
17_chat_bot/: chat_bot.py
18_email_scraper/: email_scraper.py
19_cryptocurrency_alerter/: crypto_data.py  main.py
20_public_api/: public_api.py
21_habit_tracker/: habit_tracker.py  main.py
22_currency_converter/: main.py  rates.json
23_headline_scraper/: main.py
24_distance_calculator/: distance_calculator.py
25_email_sender/: credentials.py  send_email.py
26_weather_app/: main.py  model.py  weather_api.py
27_value_prediction/: main.py  model.py
28_telegram_bot/: telegram_bot.py
30_dodgy_square/: main.py
